SP, NV, LoaiSP, NCC, KH Panel accomplished